web/css/000-controls.css
body {
	margin: 0;
	padding: 0;
	background-color: #222222;
	font-family: "LM Roman", "Georgia", "Palatino Linotype", "Palatino", "Times New Roman", "Times", serif;
	color: #FFFFFF;
}
a {
	color: #88EE44;
	text-decoration: none;
}
a:hover {
	color: #DDDDDD;
}
#title {
	position: absolute;
	top: 0;
	padding: 0.4em;
	font-weight: bold;
	font-size: 1.2em;
}
#loading {
	display: none;
}


#album-view {
	position: absolute;
	top: 2.5em;
	padding: 1em;
}
#thumbs {
	line-height: 0;
}

#thumbs img {
	border: 0;
	margin: 0;
	padding: 0;
}
#subalbums {
}
.album-button {
	float: left;
	display: block;
	width: 138px;
	height: 138px;
	margin: 6px;
	text-align: center;
	font-style: italic;
	border: 1px #86A1B6 dotted;
}


#next, #back {
	position: absolute;
	width: auto;
	font-size: 2.5em;
	line-height: 0;
	top: 40%;
}
#back {
	left: .5em;
}
#next {
	right: .5em;
}
#photo {
	border: 0;
}
#photo-view {
	position: absolute;
	bottom: 150px;
	top: 2.5em;
	overflow: hidden;
	margin-bottom: 0.5em;
	left: 0;
	right: 0;
	text-align: center;
}
.photo-view-container {
	position: absolute;
	height: 150px;
	width: 100%;
	bottom: 0;
	top: auto !important;
	overflow-x: auto;
	overflow-y: hidden;
	white-space: nowrap;
	padding: 0 !important;
}

